syntax = "proto3";
package users;
option go_package = "./internal/users/delivery/grpc/gen/;gen";

//protoc --go_out=./gen --go-grpc_out=./gen --go-grpc_opt=paths=source_relative --go_opt=paths=source_relative *.proto

service User {
  rpc SignUp(SignInUpRequest) returns (SignUpInResponse) {}
  rpc Login(SignInUpRequest) returns (SignUpInResponse) {}
  rpc GetUsernameById(GetUsernameByIdRequest) returns (GetUsernameByIdResponse) {}
}

message SignInUpRequest {
  string Username = 1;
  string Password = 2;
}

message SignUpInResponse {
  string Token = 1;
  string Exp = 2;
}

message GetUsernameByIdRequest {
  int64 UserId = 1;
}

message GetUsernameByIdResponse {
    string Username = 1;
}